
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/custom_bg"
    android:orientation="vertical">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">
    </include>


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mojokarma.mojokarma.ApplaudSomeone"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#5ebfbdbf"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#26bbb1c0"
        android:id="@+id/relativeLayout">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_image"
            android:src="@android:mipmap/sym_def_app_icon"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/img"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ara"
            android:id="@+id/txt"
            android:textSize="22sp"
            android:paddingLeft="10dp"
            android:layout_alignParentLeft="@+id/profile_image"
            android:layout_alignTop="@+id/profile_image"
            android:layout_centerHorizontal="true"
            android:textColor="#ff1bc6aa"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt2"
            android:text="@string/hr"
            android:textSize="18sp"
            android:layout_alignParentLeft="@+id/profile_image"
            android:layout_gravity="center_horizontal"
            android:layout_alignBottom="@+id/profile_image"
            android:layout_centerHorizontal="true"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_next_item"
            android:id="@+id/ib1"
            android:layout_alignTop="@+id/txt"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/relativeLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:id="@+id/linearLayout2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center">
            <ImageButton
                android:id="@+id/imgb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/colloboration"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/innovation"
                android:id="@+id/imgb2"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/integrity"
                android:id="@+id/imgb3"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/technicalexc"
                android:id="@+id/imgb4"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/linearLayout2">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/nimble"
                android:id="@+id/imgb5"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/passion"
                android:id="@+id/imgb6"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/nimble"
                android:id="@+id/imgb7"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/passion"
                android:id="@+id/imgb8"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Say"
            android:id="@+id/edt"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/linearLayout2" />
    </RelativeLayout>
</RelativeLayout>
    </LinearLayout>