<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff17a088"
            android:orientation="vertical"
            android:padding="8dp"
            android:weightSum="1">


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="95dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="@drawable/img"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/edit"
                android:layout_width="95dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_action_name6" />

            <TextView
                android:id="@+id/txtusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:text=""
                android:textColor="#fffff9"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/de"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtusername"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textSize="18sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff1bc6aa"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:id="@+id/pimg1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/nimble" />

            <ImageView
                android:id="@+id/pimg2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/techexx" />

            <ImageView
                android:id="@+id/pimg3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/innov" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ff0ca993"
            android:padding="0dp"
            android:weightSum="4">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/recte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="0"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="0.33"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/rec"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/sente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="0"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="0.33"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/sent"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/twrec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="0"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="0dp"
                    android:layout_weight="0.33"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/tweets"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/appp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="0"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="0.33"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/points"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff5db9a6"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linlaHeaderProgress2e"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewToDo2e"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"
            android:focusable="true"
            tools:listitem="@layout/row_profile">

        </ListView>

    </LinearLayout>

</LinearLayout>
